Fix APIs issue in the AppSwagger.json
